[package]
name = "photon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.7.3"
obfstr = "0.4.3"
winreg = "0.11.0"

[profile.release]
debug = false
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
